<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/scrollToTopAndSavePrevious"
        android:icon="@drawable/ic_baseline_call_missed_outgoing_24"
        app:iconTint="@color/header_symbol1"
        android:title="@string/scroll_and_continue_previous"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/scrollToTop"
        android:icon="@drawable/ic_baseline_arrow_upward_24"
        app:iconTint="@color/header_symbol1"
        android:title="@string/scroll_to_top"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_history"
        android:icon="@drawable/ic_baseline_delete_24"
        app:iconTint="@color/header_symbol1"
        android:title="@string/delete_history"
        app:showAsAction="ifRoom" />
</menu>