<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@drawable/button_round_border"
    android:backgroundTint="@color/card_template"
    android:padding="5dp">

    <TextView
        android:id="@+id/memoryValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/main_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memoryValue">

        <Button
            android:id="@+id/button"
            style="@style/Memory_button_on_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mc" />

        <Button
            android:id="@+id/button2"
            style="@style/Memory_button_on_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_plus" />

        <Button
            android:id="@+id/button3"
            style="@style/Memory_button_on_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_minus" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>